rename page.css 4

--- a/inbox.html
+++ b/inbox.html
@@ -345,7 +345,7 @@
                     </div>
                   </fieldset>
                   <div class="_1szkpit">
-                    <div class="_61mw08">
+                    <div class="inbox-container__wrapper">
                       <section
                         data-testid="orbital-panel-host-messaging-threads"
                         aria-labelledby="host-messaging-threads-header"
@@ -534,7 +534,7 @@
                                     ></div>
                                     <button class="_1dsyi2c" type="button">
                                       <div class="flex-items-center">
-                                        <div class="_vaj62s">
+                                        <div class="inbox-container__message-img-wrapper">
                                           <svg
                                             viewBox="0 0 24 24"
                                             role="img"
@@ -557,7 +557,7 @@
                                       </div>
                                       <span aria-hidden="true" class="button__hidden-text"
                                         ><div class="flex-items-center">
-                                          <div class="_vaj62s">
+                                          <div class="inbox-container__message-img-wrapper">
                                             <svg
                                               viewBox="0 0 24 24"
                                               role="img"
@@ -683,7 +683,7 @@
                                               <div class="_1pyvextg">
                                                 <div
                                                   aria-hidden="true"
-                                                  class="_1xyfhitm"
+                                                  class="inbox-container__message-name-overlay"
                                                 >
                                                   You<!-- -->:
                                                   <!-- -->Thanks for attending!
@@ -831,7 +831,7 @@
                                               <div class="_1pyvextg">
                                                 <div
                                                   aria-hidden="true"
-                                                  class="_1xyfhitm"
+                                                  class="inbox-container__message-name-overlay"
                                                 >
                                                   You<!-- -->:
                                                   <!-- -->Hello, Thanks for
