--- a/merchandising.html
+++ b/merchandising.html
@@ -372,7 +372,7 @@
                                                           --mls-wr-cr-xl: 12px;
                                                         "
                                                       >
-                                                        <div class="_1vj8vki">
+                                                        <div class="inspiration-container__carousel-content-overlay">
                                                           <div
                                                             class="_mmvgcv"
                                                             style="
@@ -987,7 +987,7 @@
                                                             /></picture>
                                                           </div>
                                                         </div>
-                                                        <div class="_1vj8vki">
+                                                        <div class="inspiration-container__carousel-content-overlay">
                                                           <div
                                                             class="_mmvgcv"
                                                             style="
@@ -1231,9 +1231,9 @@
                                                     --mls-sc-spb-xl: 0px;
                                                   "
                                                 >
-                                                  <div class="_1jnlcv5q">
+                                                  <div class="inspiration-container">
                                                     <span
-                                                      ><div class="_1vj8vki">
+                                                      ><div class="inspiration-container__carousel-content-overlay">
                                                         <div
                                                           class="flex-column"
                                                           style="
@@ -1294,7 +1294,7 @@
                                                           </div>
                                                         </div>
                                                       </div></span
-                                                    ><span class="_14846yz"
+                                                    ><span class="inspiration-container__btn"
                                                       ><div
                                                         aria-hidden="false"
                                                         class="new__arrow-btn-wrapper"
@@ -1372,10 +1372,10 @@
                                                         </div></div
                                                     ></span>
                                                   </div>
-                                                  <div class="_gjp6ac0">
-                                                    <div class="_a0tp2q">
+                                                  <div class="inspiration-container__carousel-wrapper">
+                                                    <div class="inspiration-container__carousel-contents">
                                                       <div>
-                                                        <div class="_1vj8vki">
+                                                        <div class="inspiration-container__carousel-content-overlay">
                                                           <a
                                                             href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                             class="main-content__agenda-list-btn"
@@ -1709,7 +1709,7 @@
                                                         </div>
                                                       </div>
                                                       <div>
-                                                        <div class="_1vj8vki">
+                                                        <div class="inspiration-container__carousel-content-overlay">
                                                           <a
                                                             href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                             class="main-content__agenda-list-btn"
@@ -2043,7 +2043,7 @@
                                                         </div>
                                                       </div>
                                                       <div>
-                                                        <div class="_1vj8vki">
+                                                        <div class="inspiration-container__carousel-content-overlay">
                                                           <a
                                                             href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                             class="main-content__agenda-list-btn"
@@ -2377,7 +2377,7 @@
                                                         </div>
                                                       </div>
                                                       <div>
-                                                        <div class="_1vj8vki">
+                                                        <div class="inspiration-container__carousel-content-overlay">
                                                           <a
                                                             href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                             class="main-content__agenda-list-btn"
@@ -2756,9 +2756,9 @@
                                                   --mls-sc-spb-xl: 96px;
                                                 "
                                               >
-                                                <div class="_1jnlcv5q">
+                                                <div class="inspiration-container">
                                                   <span
-                                                    ><div class="_1vj8vki">
+                                                    ><div class="inspiration-container__carousel-content-overlay">
                                                       <div
                                                         class="flex-column"
                                                         style="
@@ -2913,7 +2913,7 @@
                                                             /></picture>
                                                           </div>
                                                         </div>
-                                                        <div class="_1vj8vki">
+                                                        <div class="inspiration-container__carousel-content-overlay">
                                                           <div
                                                             class="_mmvgcv"
                                                             style="
@@ -3192,7 +3192,7 @@
                                                             /></picture>
                                                           </div>
                                                         </div>
-                                                        <div class="_1vj8vki">
+                                                        <div class="inspiration-container__carousel-content-overlay">
                                                           <div
                                                             class="_mmvgcv"
                                                             style="
@@ -3442,7 +3442,7 @@
                                                   <div class="_1xg5zmcz">
                                                     <div>
                                                       <div class="_17t88vi">
-                                                        <div class="_1vj8vki">
+                                                        <div class="inspiration-container__carousel-content-overlay">
                                                           <div
                                                             class="_rion6he"
                                                             style="
@@ -3930,7 +3930,7 @@
                                                             /></picture>
                                                           </div>
                                                         </div>
-                                                        <div class="_1vj8vki">
+                                                        <div class="inspiration-container__carousel-content-overlay">
                                                           <div
                                                             class="_mmvgcv"
                                                             style="
@@ -4203,11 +4203,11 @@
                                 data-plugin-in-point-id="EXPLORE_HEADER"
                                 data-section-id="EXPLORE_HEADER"
                               >
-                                <div class="c1kn6kxw dir dir-ltr">
+                                <div class="explore-container__header-wrapper dir dir-ltr">
                                   <header
-                                    class="header header__search-tabs-hide c1g36qz5 dir dir-ltr"
+                                    class="header header__search-tabs-hide header__search-tabs-opacity-top dir dir-ltr"
                                   >
-                                    <div class="cdfwt5b header__container dir dir-ltr">
+                                    <div class="explore-container__header header__container dir dir-ltr">
                                       <div class="header__brand-wrapper dir dir-ltr">
                                         <div class="display__flex dir dir-ltr">
                                           <div
@@ -6291,7 +6291,7 @@
                                               --mls-sc-spb-xl: 0px;
                                             "
                                           >
-                                            <div class="_1jnlcv5q">
+                                            <div class="inspiration-container">
                                               <span
                                                 ><div class="hidden block-sm"></div>
                                                 <div class="hidden block-md">
@@ -6374,8 +6374,8 @@
                                                 </div></span
                                               >
                                             </div>
-                                            <div class="_gjp6ac0">
-                                              <div class="_a0tp2q">
+                                            <div class="inspiration-container__carousel-wrapper">
+                                              <div class="inspiration-container__carousel-contents">
                                                 <div>
                                                   <div class="hidden block-sm"></div>
                                                   <div class="hidden block-md">
@@ -8443,7 +8443,7 @@
                                               --mls-sc-spb-xl: 0px;
                                             "
                                           >
-                                            <div class="_1jnlcv5q">
+                                            <div class="inspiration-container">
                                               <span
                                                 ><div class="hidden block-sm"></div>
                                                 <div class="hidden block-md">
@@ -10678,7 +10678,7 @@
                                             --mls-sc-spb-xl: 96px;
                                           "
                                         >
-                                          <div class="_1jnlcv5q">
+                                          <div class="inspiration-container">
                                             <span
                                               ><div class="hidden block-sm"></div>
                                               <div class="hidden block-md">
@@ -12612,7 +12612,7 @@
                                   data-plugin-in-point-id="PAGE_FOOTER"
                                   data-section-id="PAGE_FOOTER"
                                 >
-                                  <div class="fjmb2h dir dir-ltr">
+                                  <div class="page-footer__wrapper dir dir-ltr">
                                     <div class="section-container">
                                       <div
                                         style="--maxWidth: 1120px"
