--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -211,7 +211,7 @@
                           >
                         </div>
                       </nav>
-                      <div tabindex="-1" class="_2x3iol">
+                      <div tabindex="-1" class="privacy-sharing__container">
                         <div class="page-shell-mobile__container">
                           <div class="page-shell-mobile__container">
                             <div class="_s8pn9w">
