--- a/gift.html
+++ b/gift.html
@@ -293,7 +293,7 @@
                               <div class="e1t1qgwj dir dir-ltr">
                                 <div class="_7h9abkc">
                                   <div role="group" class="_jfyyva">
-                                    <div class="_vaj62s">
+                                    <div class="inbox-container__message-img-wrapper">
                                       <div class="_1etr4d9">
                                         <svg
                                           viewBox="0 0 16 16"
